@@ -1,3 +1,12 @@
+Tue Sep 23 10:43:28 BST 2008 dgrisby
+====================================
+
+- This is omniORB 4.1.3.
+
+ReleaseNotes.txt
+bugfixes-412.xml
+
+
 Fri Sep 19 16:04:44 BST 2008 dgrisby
 ====================================
 
